--- a/views/pages/admin/client.ejs
+++ b/views/pages/admin/client.ejs
@@ -40,7 +40,7 @@
         <div class="clients-table-container">
             <div class="table-header">
                 <h3><i class="fas fa-list"></i> Liste des Clients</h3>
-                <span class="client-count">0 clients au total</span>
+                <span class="client-count"><%= clients.length %> clients au total</span>
             </div>
             
             <div class="table-wrapper">
